--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,11 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
+.library-display{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
