added => funx for getting book info from user, book image as background for each book element, adjusted size of library element

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 }
 
 .library-display{
-    width: 50%;
+    width: 1000px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
