--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,63 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /* border: 1px solid green; */
 }
 
 body{
+    border: 1px solid red;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-.library-display{
-    width: 1000px;
+#header{
+    background-color: rgb(223, 244, 250);
+    width: 100%;
+    height: 5%;
+    text-align: center;
+}
+#contents{
+    /* flex:1; */
+    width: 100%;
+    height: 85%;
+    overflow-y: scroll;
+}
+.libraryDisplay{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    list-style-type: none;
+}
+.listHeader{
+    background-color: rgb(250, 250, 169);
+    border: none;
+}
+ul li{
+    border: 1px solid grey;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
 }
+li span,button{
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#footer{
+    background-color: rgb(223, 244, 250);
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#newBookForm{
+
+}
+
