changed the overflow-y from scroll to auto in order to hide the scrollbar if it isnt yet necessary

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
     /* flex:1; */
     width: 100%;
     height: 85%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .libraryDisplay{
     width: 100%;
